cambios realizados para la url y color de iconos de intro del index

--- a/destinos-1.html
+++ b/destinos-1.html
@@ -328,9 +328,9 @@
 					<div class="pagination">
 						<ul>
 							<li class="disabled"><a href="#!">&lt;</a></li>
-							<li class="active"><a href="destinos"><span>1</span></a></li>
-							<li><a href="destinos-1">2</a></li>
-							<li><a href="destinos-1">&gt;</a></li>
+							<li class="active"><a href="destinos-1"><span>1</span></a></li>
+							<li><a href="destinos-2">2</a></li>
+							<li><a href="destinos-2">&gt;</a></li>
 						</ul>
 					</div>
 				</div>
