--- a/destinos-2.html
+++ b/destinos-2.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="nosotros">nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="destinos">Destinos</a>
+                            <a class="nav-link" href="destinos-1">Destinos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="galeria">Galeria</a>
@@ -364,9 +364,9 @@
 				<div class="col text-center d-flex justify-content-center">
 					<div class="pagination">
 						<ul>
-							<li><a href="destinos">&lt;</a></li>
-							<li><a href="destinos"><span>1</span></a></li>
-							<li class="active"><a href="destinos-1">2</a></li>
+							<li><a href="destinos-1">&lt;</a></li>
+							<li><a href="destinos-1"><span>1</span></a></li>
+							<li class="active"><a href="destinos-2">2</a></li>
 							<li class="disabled"><a href="#!">&gt;</a></li>
 						</ul>
 					</div>
