--- a/galeria.html
+++ b/galeria.html
@@ -26,7 +26,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
 			<div class="container">
                 <div class="navbar-brand visible-xs">
-                    <a href="index.html">
+                    <a href="index">
                         <img src="img/logo/LOGO BLANCO .png" class="img-fluid" alt="logo destinos Quillabamba">
                     </a>
                 </div>
@@ -37,28 +37,28 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav m-auto d-flex align-items-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="nosotros">Nosotros</a>
                         </li>
 						<li class="nav-item">
-							<a class="nav-link" href="destinos.html">Destinos
+							<a class="nav-link" href="destinos-1">Destinos
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="galeria.html">Galeria</a>
+							<a class="nav-link" href="galeria">Galeria</a>
 						 </li>
                          <div class="logo">
-						    <a href="index.html">
+						    <a href="index">
 								<img src="img/logo/vive disfruta viaja_1.png" class="img-fluid" alt="logo-destinos-quillabmaba">
                             </a>
                         </div>
                         <li class="nav-item">
-                            <a class="nav-link" href="videos.html">Videos</a>
+                            <a class="nav-link" href="videos">Videos</a>
                         </li>
 						<li class="nav-item">
-                            <a class="nav-link" href="blog.html">Blog</a>
+                            <a class="nav-link" href="blog">Blog</a>
                         </li>
 						<li class="nav-item">
-							<a class="nav-link" href="contacto.html">contacto</a>
+							<a class="nav-link" href="contacto">contacto</a>
 						</li>
 					</ul>
 				</div>
