--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					<div class="row">
 						<div class="col-12 col-sm-12 col-md-4 col-lg-4 intro-col" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="300" data-sal-easing="ease-out-bounce">
 							<div class="intro-item d-flex flex-column align-items-center">
-								<div class="intro-icon"><img class="img-fluid" src="img/svg/beach.svg" alt=""></div>
+								<div class="intro-icon"><img class="img-fluid" src="img/svg/001-beach.svg" alt=""></div>
 								<div class="intro-text">
 									<h3>Los mejores destinos</h3>
 									<p>Disfruta de los mejores destinos de Quillabamba.</p>
@@ -171,7 +171,7 @@
 						</div>
 						<div class="col-12 col-sm-12 col-md-4 col-lg-4 intro-col" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="400" data-sal-easing="ease-out-bounce">
 							<div class="intro-item d-flex flex-column align-items-center">
-								<div class="intro-icon"><img class="img-fluid"	src="img/svg/wallet.svg" alt=""></div>
+								<div class="intro-icon"><img class="img-fluid"	src="img/svg/002-wallet.svg" alt=""></div>
 								<div class="intro-text">
 									<h3>Los Mejores Precios</h3>
 									<p>Más que un paquete, ofrecemos la mejor experiencia.</p>
@@ -180,7 +180,7 @@
 						</div>
 						<div class="col-12 col-sm-12 col-md-4 col-lg-4 intro-col" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="500" data-sal-easing="ease-out-bounce">
 							<div class="intro-item d-flex flex-column align-items-center">
-								<div class="intro-icon"><img class="img-fluid" src="img/svg/suitcase.svg" alt=""></div>
+								<div class="intro-icon"><img class="img-fluid" src="img/svg/003-travel.svg" alt=""></div>
 								<div class="intro-text">
 									<h3>Servicios Asombrosos</h3>
 									<p>Te ofrecemos la mejor calidad de servicio. y una experincia asombrosa</p>
