cambions en nosotros animcaciones Scroll reveal

--- a/nosotros.html
+++ b/nosotros.html
@@ -117,7 +117,7 @@
 				</div>
             </div>
             <div class="row">
-                <div class="col-lg-6 content_info d-flex align-self-stretch">
+                <div class="col-lg-6 content_info d-flex align-self-stretch" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="300" data-sal-easing="ease-out-bounce">
                     <div class="contenedor d-flex flex-column align-items-center">
                         <div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-search"></span></div></div>
                         <h2 class="text-center mb-4">Misión</h2>
@@ -128,7 +128,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-6 content_info d-flex align-self-stretch">
+                <div class="col-lg-6 content_info d-flex align-self-stretch" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="400" data-sal-easing="ease-out-bounce">
                     <div class="contenedor">
                         <div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-goal"></span></div></div>
                         <h2 class="text-center mb-4">Visión</h2>
@@ -143,9 +143,9 @@
         </div>
     </section>
     <section class="ftco-about d-md-flex">
-            <div class="one-half img" style="background-image: url(img/about.jpg);"></div>
-            <div class="one-half ftco-animate">
-            <div class="heading-section ftco-animate ">
+        <div class="one-half img" style="background-image: url(img/about.jpg);"></div>
+        <div class="one-half wow bounceInUp">
+            <div class="heading-section">
               <h2 class="mb-4">Responsabilidad Social</h2>
             </div>
             <div>
@@ -154,7 +154,7 @@
                     Destinos Quillabamba asume un compromiso de responsabilidad social, con las personas, el cuidado del medio ambiente y la promoción de nuestra identidad cultural.
                 </p>
             </div>
-            </div>
+        </div>
     </section>
     <!-- End Section -->
     <section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
